# raindrop

./: .gitignore  .travis.yml  CHANGELOG.md  README.rst  cabal.project  hie.yaml  raindrop.cabal  stack.yaml
app/: Main.hs
docimage/: docimage.cabal
docimage/app/: Main.hs
docimage/src/: DocAlphaStencil.hs
raindrop/: coverage-build.sh  coverage-overlay.txt  hpcdraft.sh  raindrop.cabal
raindrop-storyboard/: CHANGELOG.md  raindrop-storyboard.cabal
raindrop-storyboard/app/: Main.hs
raindrop-storyboard/src/: AlphaStencilDiagrams.hs
raindrop-storyboard/src/AlphaStencilDiagrams/: Diagrams.hs  SamplePaths.hs  State.hs
raindrop/app/: Main.hs
raindrop/src/: AlphaStencil.hs  Image.hs
raindrop/src/AlphaStencil/: Log.hs  Render.hs  Seg.hs
raindrop/src/Image/: Loop.hs  Mutable.hs  Types.hs
raindrop/test/: ImageTest.hs  Test.hs
raindrop/test/AlphaStencil/: LogTest.hs  RenderTest.hs  SegTest.hs
raindrop/test/Image/: ImageTest.hs  LoopTest.hs  MutableTest.hs  TypesTest.hs
src/: Main.hs
src/Raindrop/: Path1.hs
src/Raindrop/Internal/: Interval.hs  PolynomialRoots.hs
src/Raindrop/Internal/Geom/: Bezier2.hs  Bezier3.hs  Bound.hs  LineSeg.hs  Vec.hs
src/alpha-stencil/AlphaStencil/: Render.hs  Seg.hs
src/image/: Image.hs
src/image/Image/: Loop.hs
test/: Test.hs
test/Raindrop/Internal/: PolynomialRootsTest.hs
test/alpha-stencil/: Test.hs
test/alpha-stencil/AlphaStencil/: SegTest.hs
