cabal-version: 2.4
name:          raindrop
version:       0.1.0.0
license:       Apache-2.0
author:        Jonathan Merritt
maintainer:    j.s.merritt@gmail.com
category:      Graphics

library raindrop-image
  default-language: Haskell2010
  hs-source-dirs:   src/image
  ghc-options:
    -O2
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  exposed-modules:
    Image
    Image.Loop
  build-depends:
      base
    , primitive ^>=0.6.4.0
    , vector    ^>=0.12.0.3

test-suite raindrop-image-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test/image
  main-is:          Test.hs
  other-modules:
    Image.ImageTest
  build-depends:
      base
    , raindrop-image
    , vector             ^>=0.12.0.3
    -- , doctest            ^>=0.16.0.1
    , hedgehog           ^>=1.0
    , mutable-containers ^>=0.3.4

library raindrop-alpha-stencil
  default-language: Haskell2010
  hs-source-dirs:   src/alpha-stencil
  ghc-options:
    -O2
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  exposed-modules:
    AlphaStencil.Render
    AlphaStencil.Seg
  build-depends:
      base
    , primitive      ^>=0.6.4.0
    , raindrop-image

test-suite raindrop-alpha-stencil-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test/alpha-stencil
  main-is:          Test.hs
  other-modules:
    AlphaStencil.SegTest
  build-depends:
      base
    , raindrop-alpha-stencil
    , raindrop-image
    -- , vector             ^>=0.12.0.3
    -- -- , doctest            ^>=0.16.0.1
    , hedgehog           ^>=1.0
    -- , mutable-containers ^>=0.3.4

executable raindrop
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
      base                   ^>=4.12.0.0
    , JuicyPixels            ^>=3.3.3.1
    , raindrop-alpha-stencil
    , raindrop-image

-- test-suite tests
--   type:             exitcode-stdio-1.0
--   default-language: Haskell2010
--   hs-source-dirs:   test
--   main-is:          Test.hs
--   other-modules:
--     Eggshell.ImageTest
--     Eggshell.SegTest
--   build-depends:
--       base
--     , eggshell
--     , doctest            ^>=0.16.0.1
--     , hedgehog           ^>=1.0
--     , mutable-containers ^>=0.3.4
--     , vector             ^>=0.12.0.3

-- executable eggshell
--   main-is:          Main.hs
--   hs-source-dirs:   app
--   default-language: Haskell2010
--   build-depends:
--       base        ^>=4.12.0.0
--     , eggshell
--     , JuicyPixels ^>=3.3.3.1