cabal-version: 2.4
name:          docimage
version:       0.1.0.0
license:       Apache-2.0
author:        Jonathan Merritt
maintainer:    j.s.merritt@gmail.com
category:      Graphics

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -O2
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  exposed-modules:
    DocAlphaStencil
  build-depends:
      base
    , colour              ^>=2.3.5
    , diagrams-lib        ^>=1.4.2.3
    , diagrams-rasterific ^>=1.4.1.1
    , raindrop
    , vector              ^>=0.12.0.3

executable docimage
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
      base                   ^>=4.12.0.0
    , docimage