cabal-version:       2.4

name:                raindrop-storyboard
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Graphics
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    AlphaStencilDiagrams.Diagrams
    AlphaStencilDiagrams.State
  build-depends:
      base ^>=4.12.0.0
    , colour
    , diagrams-lib
    , lens
    , raindrop
    , vector

executable raindrop-storyboard
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:
      base ^>=4.12.0.0
    , diagrams-lib
    , diagrams-rasterific
    , raindrop-storyboard
