cabal-version: 2.4
name:          raindrop
version:       0.1.0.0
license:       Apache-2.0
author:        Jonathan Merritt
maintainer:    j.s.merritt@gmail.com
category:      Graphics

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -O2
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  exposed-modules:
    AlphaStencil.Log
    AlphaStencil.Render
    AlphaStencil.Seg
    Image
    Image.Loop
  build-depends:
      base
    , mutable-containers ^>=0.3.4
    , primitive          ^>=0.6.4.0
    , vector             ^>=0.12.0.3

test-suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:
    Image.ImageTest
  build-depends:
      base
    , raindrop
    , hedgehog           ^>=1.0
    , mutable-containers ^>=0.3.4
    , vector             ^>=0.12.0.3

executable raindrop
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
      base                   ^>=4.12.0.0
    , JuicyPixels            ^>=3.3.3.1
    , JuicyPixels-extra      ^>=0.4.1
    , raindrop
    , vector                 ^>=0.12.0.3