cabal-version: 2.4
name:          raindrop
version:       0.1.0.0
license:       Apache-2.0
author:        Jonathan Merritt
maintainer:    j.s.merritt@gmail.com
category:      Graphics

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -O2
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  exposed-modules:
    AlphaStencil
    AlphaStencil.Log
    AlphaStencil.Render
    AlphaStencil.Seg
    Image
    Image.Mutable
    Image.Loop
    Image.Types
  build-depends:
      base
    , mtl
    , mutable-containers
    , primitive
    , transformers
    , vector

test-suite raindrop-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:
    AlphaStencil.LogTest
    AlphaStencil.RenderTest
    AlphaStencil.SegTest
    ImageTest
    Image.LoopTest
    Image.MutableTest
    Image.TypesTest
  build-depends:
      base
    , doctest
    , raindrop
    , hedgehog
    , mtl
    , mutable-containers
    , vector

executable raindrop
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
      base
    , JuicyPixels
    , JuicyPixels-extra
    , raindrop
    , vector
